добавила lang,title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8">
+    <title>Хьюстон</title>
 </head>
 <body>
 <div style="width:800px; margin: auto;">
