--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Хьюстон</title>
+    <title>Хьюстон-город мечты</title>
 </head>
 <body>
 <div style="width:800px; margin: auto;">
