--- a/index.html
+++ b/index.html
@@ -657,6 +657,28 @@
         <li>Басра (Ирак)
         </li>
     </ul>
+    <form method="post" action="input5.php">
+        <p><b>Какая тема данной статьи Вам понравилась больше?</b></p>
+        <p>
+            <input type="checkbox" name="option1" value="a1">История<Br>
+            <input type="checkbox" name="option2" value="a2">Физико-географическая характеристика<Br>
+            <input type="checkbox" name="option3" value="a3">Экономика<Br>
+            <input type="checkbox" name="option4" value="a4">Население<Br>
+            <input type="checkbox" name="option5" value="a5">Города-побратимы<Br>
+            <input type="checkbox" name="option6" value="a5">Никакая
+        </p>
+        <p>
+            <input type="submit" value="Отправить">
+        </p>
+    </form>
+    <form action="handler.php">
+        <p><b>Вы бывали в Хьюстоне?</b></p>
+        <p><input name="dzen" type="radio" id="123456"> Да </p>
+        <p><input name="dzen" type="radio" id="234567"> Нет </p>
+        <p><input name="dzen" type="radio" id="345678">Не помню</p>
+        <p><input name="dzen" type="radio" id="456789">Это где?</p>
+        <p><input type="submit" value="Выбрать"></p>
+    </form>
 </div>
 </body>
 </html>
